optimisation  des commande

--- a/MediaTekDocuments/MediaTekDocuments.csproj
+++ b/MediaTekDocuments/MediaTekDocuments.csproj
@@ -61,12 +61,11 @@
     <Reference Include="ZstdNet, Version=1.4.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dal\Access.cs" />
     <Compile Include="manager\ApiRest.cs" />
     <Compile Include="controller\FrmMediatekController.cs" />
-    <Compile Include="dal\Access.cs" />
-    <Compile Include="view\FrmMediatek.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="model\Commande.cs" />
+    <Compile Include="view\FrmMediatek.cs" />
     <Compile Include="view\FrmMediatek.Designer.cs">
       <DependentUpon>FrmMediatek.cs</DependentUpon>
     </Compile>
